tests/run/error_try_non_result.out
tests/run/error_try_non_result.em:3:13: error: '?' requires a Result or Option value
